--- a/style.css
+++ b/style.css
@@ -1,80 +1,78 @@
-*
-{
- margin: 0;
- padding: 0;
- font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- user-select: none;
-}
 body{
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #ffcff74b;
-}
-.inputBox {
-  position: relative;
-  width: 650px;
-  ;
-}
-
-.inputBox h2 {
-  font-size: 52px;
+  background-color: #464346d1;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
   color: cornflowerblue;
-  text-align: center;
-  padding-bottom: 20px;
-  text-shadow: 2px 2px rgb(237, 113, 200);
+  
 }
+.container {
+  background-color: rgb(250, 215, 241);
+  color: cornflowerblue;
+  padding:3rem;
+  border-radius: 1rem;
+  border: 2px solid rgb(237, 113, 200);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  
+  
+}
+ .form{
+  display: grid;
+  grid-template-columns: auto auto;
+  row-gap: 1rem;
+  column-gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+ }
+.title{
+  margin:0;
+  text-align: center;
 
-  span {
-    color: #de17c0e9;
-    text-shadow: 2px 2px cornflowerblue;
-  }
+}
+label{
+  font-weight: bold;
 
-  ::placeholder{
-    color: cornflowerblue;
-    font-weight: bold;
-    text-align:center;
-    text-shadow: 2px 2px #c9c0c7b8;
-  }
-
-  .inputBox input {
-    position: relative;
-    width: 100%;
-    height: 150px;
-    border: none;
-    margin: 15px 0px 10px;
-    background: transparent;
-    outline: none;
-    padding: 0px 20px;
-    font-size: 34px;
-    letter-spacing: 4px;
-    box-sizing: border-box;
-    border-radius:8px;
-    color: rgba(237, 100, 210, 0.542);
-    box-shadow: -4px -4px 10px 10px;
-    margin-bottom: 20px;
-
-  }
-  .inputBox input ::placeholder{
-    letter-spacing: 0;
-  }
-  button{
-    position:relative;
-    cursor:pointer;
-    background-color:cornflowerblue;
-    font-size: 24px;
-    border: 10px;
-    border-radius: 9px; 
-    padding: 10px 15px; 
-    box-shadow: 5px;
-    color: #ffcff74b;
-    text-shadow: white 1px 1px;
-    display: inline-block;
-  }
-
-  .inputBox #btn:active{
-    background-color:#de17c0e9;;
-    transform: scale(.98);
-
-  }
+}
+.character-amount-container{
+display:flex;
+align-items: center;
+}
+.number-input{
+ width:3rem; 
+}
+.password-display{
+  background-color: white;
+  color: cornflowerblue;
+  padding:1rem;
+  border:1px solid rgb(250, 215, 241);
+  height: 4rem;
+  width: 400px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  word-break: break-all;
+  border-radius: .5rem;
+}
+.btn{
+  grid-column: span 2;
+  background-color: transparent;
+  border: 2px solid cornflowerblue;
+  color: cornflowerblue;
+  font-weight: bold;
+  padding: .5rem 1rem;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+.btn:hover{
+  background-color:white;
+ 
+}
